fix(styles/Layout): add gap adjustments for consistent spacing
- Introduced `gap` property to layout elements for improved alignment.
- Adjusted gap behavior for devices with imprecise input methods.

--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -25,6 +25,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  gap: 8px;
   justify-content: center;
   position: absolute;
   right: clamp(22px, 8vw, 44px);
@@ -56,6 +57,8 @@
   }
 
   @include mixins.device-with-imprecise-input {
+    gap: 0;
+
     a {
       padding: 4px;
 
